--- a/html/paginaPrincipal/paginaPrincipal.html
+++ b/html/paginaPrincipal/paginaPrincipal.html
@@ -219,6 +219,7 @@
                 </article>
             </main>
             <aside class="aside1 center">
+                <!--ASIDE 2-->
                 <!--LINK A PAGINAS RECOMENDADAS-->
                 <section class="background-aside">
                     <h2 class="tituloBackground-aside">PAGINAS RECOMENDADAS</h2>
