Creación de las Cookies
Todos los comentarios realizados por apartado.

--- a/html/paginaPrincipal/paginaPrincipal.html
+++ b/html/paginaPrincipal/paginaPrincipal.html
@@ -261,6 +261,16 @@
             </video>
             
         </div>
+        <!--COOKIES DE LA PAGINA-->
+        <div id="avisoCookies" class="aviso-cookies">
+            <h2 id="tituloCookies">Este sitio web utiliza cookies para mejorar la experiencia del usuario.</h2>
+            <form id="cookiesForm">
+                <label class="cookiesCheck"><input type="checkbox" name="cookiesAnaliticas">Cookies Analíticas</label><br>
+                <label class="cookiesCheck"><input type="checkbox" name="cookiesPublicitarias"> Cookies Publicitarias</label><br>
+                <label class="cookiesCheck"><input type="checkbox" name="cookiesPersonalizadas"> Cookies Personalizadas</label><br>
+                <button class="custom-btn btn-3" type="submit"><span>Aceptar</span></button>
+            </form>
+        </div>
     <footer>
         <p>Trabajo hecho por Hakeem Siddique Inc. ©</p>
     </footer>
