calendario implementado a pagina principal

--- a/html/paginaPrincipal/paginaPrincipal.html
+++ b/html/paginaPrincipal/paginaPrincipal.html
@@ -122,6 +122,12 @@
                         <img src="../../img/paginaPrincipal/imagenes/juegosjuegos.jpg" alt="juegos_a_eligir" class="anuncio">
                     </a>
                 </section>
+                <!--IFRAME DE LA PAGINA CV-->
+                <section class="background-aside">
+                    <div id="contenedorjson">
+                        <iframe src="../../html/calendario/calendario.html" width="400" height="500" title="Embedded Page"></iframe> 
+                    </div>
+                </section>
                 <!--VIDEO DE YOUTUBE-->
                 <section>
                     <iframe width="240" height="160" src="https://www.youtube.com/embed/wgiRK8_iKdg?si=5RJK1BxJbeBADG2X" 
