marcar varios dias de evento

--- a/html/calendario/calendario.html
+++ b/html/calendario/calendario.html
@@ -28,7 +28,7 @@
                 <li>Fri</li>
                 <li>Sat</li>
             </ul>
-            <ul class="dias" onclick="marcarEvento()"></ul>
+            <ul class="dias" onclick="marcarEvento()" ondblclick="quitarEvento()"></ul>
         </div>
     </div>
 
