--- a/html/calendario/calendario.html
+++ b/html/calendario/calendario.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     
-    <div class="wrapper">
+    <div class="wrapper" id="wrapper">
         <header>
             <p class="current-date">September 2022</p>
             <div class="icons">
